style fix & scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,31 @@
   --text-primary: #edeeee;
   --text-secondary: #a0aec0;
 }
+
+/* scrollbar */
+
+::-webkit-scrollbar {
+  background-color: var(--primary-color);
+  width: 16px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--primary-color);
+}
+::-webkit-scrollbar-track:hover {
+  background-color: var(--secondary-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 16px;
+  border: 5px solid var(--primary-color);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary-color);
+  border: 4px solid var(--secondary-color);
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
